--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,5 @@
 org.gradle.daemon=true
-org.gradle.jvmargs=-Xms128m -Xmx1500m
+#org.gradle.jvmargs=-Xms128m -Xmx1500m
+org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 org.gradle.configureondemand=true
+
